# robot_telescope

./: README.md
allskycamera_app/libs/libsunrise/: README.md
allskycamera_app/libs/libsunrise/src/: colours.h  sunrise.cpp
allskycameraapp/: CMakeLists.txt  FindTensorFlow.cmake  README.md  allskycameraapp.pro
allskycameraapp/libs/libsunrise/src/: CMakeLists.txt  colours.cpp  main.cpp  src.pro  sunrise.h
allskycameraapp/libs/smtpclient/src/: CMakeLists.txt  smtpclient.cpp
allskycameraapp/src/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  skycam.pb  src.pro
weather_sensor_dht22/: README.md
weather_sensor_dht22/extensions/dht22parse/: install.py
weather_sensor_dht22/sensor_polling/: dht22_sensor_weewx.py  dht22_sensor_weewx.sh  dht22_sensor_weewx_startup.sh  install_dht_reader.sh
weather_sensor_dht22bmp280/: README.md
weather_sensor_dht22bmp280/extensions/dht22bmp280parse/: install.py
weather_sensor_dht22bmp280/sensor_polling/: dht22bmp280_sensor_weewx.py  dht22bmp280_sensor_weewx.sh  dht22bmp280_sensor_weewx_startup.sh  install_dht22bmp280_reader.sh
