
CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)

PROJECT(ALLSKYCAMERA)

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(TensorFlowCpp REQUIRED PATHS /usr/lib/cmake/tensorflow-cpp)

FIND_PACKAGE(Qt5Core)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_NO_KEYWORDS -g")

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(DEPS REQUIRED geoclue-2.0 glib-2.0)

ADD_SUBDIRECTORY(libs/libsunrise/src)
ADD_SUBDIRECTORY(src)
